<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <EditText
        android:id="@+id/text_exercise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_name"
        android:textSize="18sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <RadioButton
                android:id="@+id/radio_timed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/timed"
                android:textSize="18sp"/>

            <RadioButton
                android:id="@+id/radio_rep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetitive"
                android:textSize="18sp"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_add_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_exercise"
            android:textColor="@color/White"/>
    </RelativeLayout>
</LinearLayout>