<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GhostWhite"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_stop"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/placeholder"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/default_time"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/button_stop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/button_check"
            android:src="@drawable/ic_close_black_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/button_check"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/button_timer"
            android:src="@drawable/ic_done_black_24dp"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/button_timer"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_play_arrow_black_24dp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_no_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_reps"
        android:textSize="16sp" />

</LinearLayout>